[fix] mobile spacing

--- a/src/styles/components/Testimonials/_Testimonials.scss
+++ b/src/styles/components/Testimonials/_Testimonials.scss
@@ -5,7 +5,7 @@
 
 // Elements
 .Testimonials__heading {
-	margin-bottom: 65px;
+	@include responsive-property(margin-bottom, 35px, 65px);
 }
 
 .Testimonials__items {
