--- a/src/styles/components/_CaseStudySection.scss
+++ b/src/styles/components/_CaseStudySection.scss
@@ -7,7 +7,8 @@
 // Elements
 .CaseStudySection__text {
 	max-width: 750px;
-	margin: 0 auto 65px;
+	margin: 0 auto;
+	@include responsive-property(margin-bottom, 35px, 65px);
 
 	h2 {
 		margin-bottom: 15px;
